Update and rename Untitled0 (2).ipynb to Investigating COVID-19 Virus Trends.ipynb

--- a/Data_Science/Investigating COVID-19 Virus Trends.ipynb
+++ b/Data_Science/Investigating COVID-19 Virus Trends.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Guided Project: Investigating COVID-19 Virus Trends"
+        "### Investigating COVID-19 Virus Trends"
       ],
       "metadata": {
         "id": "MVkCjkRk6Xe3"
